cambios 06/05